[package]
name = "maze-of-many-missiles"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12"
bevy-egui-kbgp = "0.16.0"
bevy-tnua = "0.13.0"
bevy-tnua-rapier2d = "0.1.0"
bevy-yoleck = { version = "0.17.0", features = ["vpeol_3d"] }
bevy_egui = "0.23.0"
bevy_rapier2d = "0.23.0"
clap = { version = "4.4.10", features = ["derive"] }
leafwing-input-manager = "0.11.2"
